deploy/bfx/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bfx-app
  labels:
    app: bfx-app
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: bfx-app
  template:
    metadata:
      labels:
        app: bfx-app
    spec:
      imagePullSecrets:
        - name: ecr-creds
      containers:
        - name: app
          image: 730335375436.dkr.ecr.sa-east-1.amazonaws.com/bfx/bfx-shop:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: http
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: bfx-app
  labels:
    app: bfx-app
spec:
  type: ClusterIP
  selector:
    app: bfx-app
  ports:
    - name: http
      port: 80
      targetPort: 3000
